Collect hardware and VM details in proxstat report

--- a/dto_proxstat.yml
+++ b/dto_proxstat.yml
@@ -49,8 +49,34 @@
       ansible.builtin.debug:
         var: block_devices.stdout_lines
 
+    - name: "11 Gather hardware details"
+      ansible.builtin.command: lshw -json
+      register: hardware_details
+      changed_when: false
 
-    - name: "11 Collect data for summary"
+    - name: "12 Show hardware details"
+      ansible.builtin.debug:
+        var: hardware_details.stdout
+
+    - name: "13 Get system uptime"
+      ansible.builtin.command: uptime -p
+      register: uptime
+      changed_when: false
+
+    - name: "14 Show system uptime"
+      ansible.builtin.debug:
+        var: uptime.stdout
+
+    - name: "15 List virtual machines"
+      ansible.builtin.command: qm list
+      register: vm_list
+      changed_when: false
+
+    - name: "16 Show virtual machines"
+      ansible.builtin.debug:
+        var: vm_list.stdout_lines
+
+    - name: "17 Collect data for summary"
       ansible.builtin.set_fact:
         proxstat_data:
           storage_status: "{{ storage_status.stdout_lines }}"
@@ -58,6 +84,10 @@
           ip_addresses: "{{ ip_addr_output.stdout_lines }}"
           pve_version: "{{ pve_version.stdout_lines }}"
           block_devices: "{{ block_devices.stdout_lines }}"
+          hardware_details: "{{ hardware_details.stdout }}"
+          uptime: "{{ uptime.stdout }}"
+          creation_date: "{{ ansible_date_time.iso8601 }}"
+          vm_list: "{{ vm_list.stdout_lines }}"
 
     - name: Build Proxmox summary HTML
       ansible.builtin.template:
@@ -65,4 +95,3 @@
         dest: proxmox-summary.html
       delegate_to: localhost
       run_once: true
-
