--- a/dto_proxstoragedestroy.yml
+++ b/dto_proxstoragedestroy.yml
@@ -8,18 +8,14 @@
         proxstorage: "{{ lookup('template', 'templates/proxstorage/' + inventory_hostname + '.yml.j2') | from_yaml }}"
 
     - name: "02 Remove Proxmox storage configuration"
-      ansible.builtin.blockinfile:
-        path: /etc/pve/storage.cfg
-        marker: "# {mark} ANSIBLE MANAGED proxstorage"
-        block: |
-          lvmthin: {{ proxstorage.storage_name }}
-              thinpool {{ proxstorage.thinpool_name }}
-              vgname {{ proxstorage.vg_name }}
-              content rootdir,images
-        state: absent
+      ansible.builtin.command: "pvesm remove {{ proxstorage.storage_name }}"
+      register: remove_storage
+      failed_when: false
+      changed_when: remove_storage.rc == 0
       notify:
         - Restart pvedaemon
         - Restart pveproxy
+        - Restart pvestatd
 
     - name: "03 Remove thin volumes"
       ansible.builtin.lvol:
@@ -69,4 +65,9 @@
     - name: Restart pveproxy
       ansible.builtin.service:
         name: pveproxy
+        state: restarted
+
+    - name: Restart pvestatd
+      ansible.builtin.service:
+        name: pvestatd
         state: restarted
