--- a/dto_proxinvoke.yml
+++ b/dto_proxinvoke.yml
@@ -1,7 +1,12 @@
 ---
+# dto_proxinvoke.yml — v0.2.0
+# - GUI: set smbios1 without quotes; dot im Manufacturer wird nur für GUI entfernt
+# - Guest: exact strings (inkl. Punkt) via --args -smbios
+
 - name: Create Proxmox virtual machines
   hosts: proxmox
   gather_facts: true
+
   tasks:
     - name: "01 Verify host availability"
       ansible.builtin.ping:
@@ -46,6 +51,27 @@
       register: qm_list
       changed_when: false
 
+    # ---------- Build GUI-safe smbios1 (no quotes; dot entfernt NUR für GUI) ----------
+    - name: "07b Build smbios1 for GUI"
+      ansible.builtin.set_fact:
+        smbios1_gui: >-
+          uuid={{ proxinvoke.smbios1.uuid }},
+          manufacturer={{ (proxinvoke.smbios1.manufacturer | string | regex_replace('\.', '')) }},
+          product={{ (proxinvoke.smbios1.product | string) }}
+      when: proxinvoke.smbios1 is defined
+      changed_when: false
+
+    # ---------- Build exact QEMU -smbios (mit Punkt, mit Quotes) ----------
+    - name: "07c Build exact -smbios for guest"
+      ansible.builtin.set_fact:
+        smbios_args_exact: >-
+          -smbios type=1,uuid={{ proxinvoke.smbios1.uuid }},
+          manufacturer="{{ proxinvoke.smbios1.manufacturer }}",
+          product="{{ proxinvoke.smbios1.product }}"
+      when: proxinvoke.smbios1 is defined
+      changed_when: false
+
+    # ---------- Create VM ----------
     - name: "08 Create VM"
       ansible.builtin.command: >-
         qm create {{ proxinvoke.vmid }}
@@ -54,22 +80,27 @@
         --cores {{ proxinvoke.cores }}
         --net0 {{ proxinvoke.networks[0] }}
         {% if proxinvoke.smbios1 is defined %}
-        --smbios1 "uuid={{ proxinvoke.smbios1.uuid }},manufacturer={{ proxinvoke.smbios1.manufacturer | quote }},product={{ proxinvoke.smbios1.product | quote }}"
+        --smbios1 "{{ smbios1_gui }}"
+        --args '{{ smbios_args_exact }}'
         {% endif %}
       when: proxinvoke.vmid|string not in qm_list.stdout
 
+    # ---------- Disk ----------
     - name: "09 Configure disk"
       ansible.builtin.command: >-
         qm set {{ proxinvoke.vmid }}
         --scsi0 {{ proxinvoke.storage }}:{{ proxinvoke.disk_size | regex_replace('[^0-9]', '') | int }},discard=on
       when: proxinvoke.vmid|string not in qm_list.stdout
 
-    - name: "10 Set SMBIOS parameters"
+    # ---------- Ensure SMBIOS stays consistent ----------
+    - name: "10 Set exact SMBIOS (guest) + GUI smbios1"
       ansible.builtin.command: >-
         qm set {{ proxinvoke.vmid }}
-        --smbios1 "uuid={{ proxinvoke.smbios1.uuid }},manufacturer={{ proxinvoke.smbios1.manufacturer | quote }},product={{ proxinvoke.smbios1.product | quote }}"
+        --args '{{ smbios_args_exact }}'
+        --smbios1 "{{ smbios1_gui }}"
       when: proxinvoke.smbios1 is defined
 
+    # ---------- Status / Verification ----------
     - name: "11 Check VM status"
       ansible.builtin.command: "qm status {{ proxinvoke.vmid }}"
       register: vm_status
@@ -78,3 +109,12 @@
     - name: "12 Display VM status"
       ansible.builtin.debug:
         var: vm_status.stdout_lines
+
+    - name: "13 Verify smbios1 in config"
+      ansible.builtin.command: "qm config {{ proxinvoke.vmid }}"
+      register: qm_cfg
+      changed_when: false
+
+    - name: "14 Show smbios1 line"
+      ansible.builtin.debug:
+        msg: "{{ (qm_cfg.stdout_lines | select('match', '^smbios1:') | list | first) | default('smbios1: <not found>') }}"
